<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_selector">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="30dp"
            android:text="@string/help_intro"
            />
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/help_intro_text"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="30dp"
            android:text="@string/help_parcours"
            />
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/help_parcours_text"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="30dp"
            android:text="@string/help_trajets"
            />
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/help_trajets_text"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</LinearLayout>