<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@drawable/grad_selector">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:textColor="@color/black"
                android:id="@+id/lblUserType"
                android:layout_height="30dp"
                android:text="@string/lbl_driver"
                />
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/lbl_driver"
                android:textColorHint="@color/grey"
                android:id="@+id/txtDriver"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingBottom="5dp"
                android:paddingTop="2dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="30dp"
            android:text="@string/lbl_depart"
            />
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/lbl_depart"
                android:textColorHint="@color/grey"
                android:id="@+id/txtDeparture"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingBottom="5dp"
                android:paddingTop="2dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="30dp"
            android:text="@string/lbl_arrival"
            />
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_arrival"
            android:textColorHint="@color/grey"
            android:id="@+id/txtArrival"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="5dp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="30dp"
            android:text="@string/lbl_km"
            />
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_km"
            android:textColorHint="@color/grey"
            android:id="@+id/txtKM"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="5dp"/>
            </LinearLayout>
        <Button
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_day"
            android:textColorHint="@color/grey"
            android:id="@+id/btnDate"
            android:background="@color/white"
            android:inputType="text"
            android:onClick="showDatePickerDialog"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_hour"
            android:textColorHint="@color/grey"
            android:id="@+id/btnTime"
            android:background="@color/white"
            android:onClick="showTimePickerDialog"
            android:inputType="text"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:layout_marginBottom="15dp"/>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_oneTime"
                android:checked="true"
                android:layout_marginLeft="30dp"
                android:id="@+id/rbOnce" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_weekly"
                android:layout_marginLeft="30dp"
                android:id="@+id/rbWeekly" />
        </RadioGroup>

        <EditText
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_price"
            android:textColorHint="@color/grey"
            android:id="@+id/txtPrice"
            android:background="@color/white"
            android:inputType="text"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_nbPlaces"
            android:textColorHint="@color/grey"
            android:id="@+id/txtNbPlaces"
            android:background="@color/white"
            android:inputType="text"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="220dp"
            android:background="@drawable/green_button"
            android:id="@+id/btnCreateParcours"
            android:onClick="createParcours"
            android:layout_height="36dp"
            android:text="@string/lbl_publish"
            style="@style/button_text"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout >