<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:fillViewport="true"
    android:weightSum="1" >


    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@color/blue_screen">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ecarpool_logo" />

        <EditText
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/lbl_login"
            android:id="@+id/txtLogin"
            android:background="@color/white"
            android:inputType="text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_centerVertical="true"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:ellipsize="start"
            android:hint="@string/lbl_password"
            android:id="@+id/txtPassword"
            android:background="@color/white"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="220dp"
            android:id="@+id/btnInscription"
            android:onClick="validateConnection"
            android:layout_height="36dp"
            android:text="@string/lbl_connection"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="18dp"
            android:onClick="signUp"
            android:clickable="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/lbl_noAcount" />

    </LinearLayout>
</ScrollView >